refactor: улучшена читемость кода